<?xml version="1.0"?>
<package format="2">
  <name>roomba</name>
  <version>1.0.0</version>
  <description>Roomba code</description>

  <maintainer email="qbeq@todo.todo">qbeq</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>catkin</build_depend>

  <depend>ca_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>libcreate</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <exec_depend>ca_description</exec_depend>

  <export>

  </export>
</package>
